--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+@theme {
+  --font-montserrat: 'Montserrat', 'sans-serif';
+  --animate-fadeIn: fadeIn 0.3s ease-in-out;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+}
+@layer base {
+  @font-face {
+    font-family: "Montserrat";
+    src: url('/assets/fonts/Montserrat/Montserrat-Medium.ttf')
+  }
+}
+@plugin "daisyui" {
+  themes: night --default;
+}
